--- a/Contador/assets/css/style.css
+++ b/Contador/assets/css/style.css
@@ -25,11 +25,11 @@ button {
     cursor: pointer;
 }
 
-#counter {
+#contador {
     display: flex;
 }
 
-#currentNumber {
+#numeroAtual {
     display: flex;
     align-items: center;
     margin: 0 20px;
